plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '6.+'
}

version = mod_version
group = mod_group_id

repositories {
    maven {
        name 'LDTTeam - Modding'
        url 'https://ldtteam.jfrog.io/ldtteam/modding/'
    }
    maven {
        name 'BlueMap - Releases'
        url 'https://repo.bluecolored.de/releases'
    }
    maven {
        name 'CurseMaven'
        url 'https://cursemaven.com'
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation(fg.deobf("com.ldtteam:minecolonies:${project.minecolonies_version}")) {
        transitive = false
    }

    implementation(fg.deobf("com.ldtteam:structurize:${project.structurize_version}")) {
        transitive = false
    }

    implementation(fg.deobf("com.ldtteam:blockui:${project.blockui_version}")) {
        transitive = false
    }

    implementation(fg.deobf("com.ldtteam:domum_ornamentum:${project.domum_ornamentum_version}:universal")) {
        transitive = false
    }

    compileOnly(fg.deobf("de.bluecolored.bluemap:BlueMapAPI:${project.bluemap_api_version}"))
    compileOnly(fg.deobf('com.flowpowered:flow-math:1.0.3'))
    runtimeOnly(fg.deobf("curse.maven:bluemap-406463:${project.bluemap_curse_file_version}"))
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version                : minecraft_version,
                             minecraft_version_range          : minecraft_version_range,
                             forge_version                    : forge_version,
                             forge_version_range              : forge_version_range,
                             loader_version_range             : loader_version_range,
                             mod_id                           : mod_id,
                             mod_name                         : mod_name,
                             mod_license                      : mod_license,
                             mod_version                      : mod_version,
                             mod_authors                      : mod_authors,
                             mod_description                  : mod_description,
                             mod_issue_tracker_url            : mod_issue_tracker_url,
                             dependencies_minecolonies_version: minecolonies_version,
                             dependencies_bluemap_version     : bluemap_version]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

    finalizedBy 'reobfJar'
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

def copyLibsToRuns = tasks.register('copyLibsToRuns', Copy) {
    from configurations.runtimeClasspath
    into "$rootDir/runs/client/mods"
    include '*minecolonies*'
}

//tasks.named('prepareRuns') {
//    finalizedBy copyLibsToRuns
//}

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    copyIdeResources = true

    runs {
        // applies to all the run configs below
        configureEach {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            // example of overriding the workingDirectory set in configureEach above
            workingDirectory project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}
